--- a/apps/AdminComposite/Views/Forum/Details.cshtml
+++ b/apps/AdminComposite/Views/Forum/Details.cshtml
@@ -88,7 +88,7 @@
 					</dl>
 				</fieldset>
 
-				<button type="submit">Copy to Production</button>
+				<button type="submit">Deploy to Production</button>
 				<button type="submit">Save Settings</button>
 			}
 		</div>
