disable deploy to production for now

--- a/apps/AdminComposite/Views/Forum/Details.cshtml
+++ b/apps/AdminComposite/Views/Forum/Details.cshtml
@@ -88,8 +88,8 @@
 					</dl>
 				</fieldset>
 
-				<button type="submit">Deploy to Production</button>
 				<button type="submit">Save Settings</button>
+				<button type="submit" disabled="disabled">Deploy to Production</button>
 			}
 		</div>
 
