added forum title to header, replaced broken logo, several other ui tweaks

--- a/apps/ForumComposite/Views/Post/ByCategory.cshtml
+++ b/apps/ForumComposite/Views/Post/ByCategory.cshtml
@@ -4,7 +4,7 @@
 	ViewBag.Title = "Forum Category";
 }
 <p class="Box BoxCategories">
-<h4><a href="#">@ViewBag.ForumName</a>: Forum Category</h4>
+<h4>Forum Category</h4>
 </p>
 <ul class="DataList Discussions">
 	<!--<li class="Item Alt  Announcement">
