all disabled buttons are hidden

--- a/apps/AdminComposite/Views/Forum/Details.cshtml
+++ b/apps/AdminComposite/Views/Forum/Details.cshtml
@@ -67,7 +67,7 @@
 					</dl>
 				</fieldset>
 
-				<fieldset>
+@*				<fieldset>
 					<legend>Other Settings to Copy</legend>
 
 					<dl>
@@ -86,7 +86,7 @@
 						<dt><label for="copy-theme">Theme Selection</label></dt>
 						<dd><input type="checkbox" id="copy-theme"/></dd>
 					</dl>
-				</fieldset>
+				</fieldset>*@
 
 				<button type="submit">Save Settings</button>
 				<button type="submit" disabled="disabled">Deploy to Production</button>
