--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -59,7 +59,7 @@
 
 	<section>
 		<p style="float:left">View, edit, activate and create categories for this forum</p>
-		<a href="#" style="float:right" class="button-link blue" id="create-category">New Category</a>
+		<a href="#" style="float:right" class="button-link blue" id="create-category">Add Category</a>
 	</section>
 	
 	<table id="category-table">
