--- a/apps/AdminComposite/Views/Moderation/_list.cshtml
+++ b/apps/AdminComposite/Views/Moderation/_list.cshtml
@@ -7,8 +7,13 @@
 	<li class="moderation-item unread" data-post-id="@post.Identifier">
 		<div style="float:left;width:85%">
 			<span class="logs-timestamp">@post.Created</span>
-			<h4>@post.Title</h4>
+			
+			<div>
+				<h4>@post.Title</h4>
+				<p class="note last-action" data-post-id="@post.Identifier"></p>
+			</div>
 
+			<div style="clear: both"></div>
 			<p>
 				@post.Body
 			</p>
@@ -22,8 +27,6 @@
 			<a href="#" class="reject" data-post-id="@post.Identifier"><img src="@Url.Content("~/Content/thumb-down.png")" alt="reject" rel="tooltip" original-title="Reject this @ViewBag.ModerationType"/></a>
 			<br/>
 			<a href="#" class="block-user confirmation-dialog" data-confirmation-message="Really Block @post.AuthorDisplayName?" data-confirm-function="blockUser" data-item-id="@post.AuthorIdentifier"><img src="@Url.Content("~/Content/chromatron/img/icons/icon_table_delete.png")" alt="block author" rel="tooltip" original-title="Block this author"/></a>
-			<br/>
-			<p style="margin-top: 25px" class="note last-action" data-post-id="@post.Identifier"></p>
 		</div>
 	</li>
 } 
