--- a/apps/ForumComposite/Views/Post/List.cshtml
+++ b/apps/ForumComposite/Views/Post/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ForumAgent.ReadModels
 @model PostListing
 @{
-	ViewBag.Title = "Forum Home";
+	ViewBag.Title = ViewBag.ForumName;
 }
 <ul class="DataList Discussions">
 	<!--<li class="Item Alt  Announcement">
