went back to original edit button scheme (buttons for unavailable actions are hidden)

--- a/apps/AdminComposite/Content/chromatron/css/style.css
+++ b/apps/AdminComposite/Content/chromatron/css/style.css
@@ -115,7 +115,7 @@ section[role=navigation] header {
 	padding-left:25px;
 }
 section[role=navigation] header a {
-	background:url('../../../content/logo_3.jpg') no-repeat;
+	background:url('../../../content/logo_3.png') no-repeat;
 	width:200px;
 	height:65px;
 	text-indent:-9999em;
@@ -1423,7 +1423,7 @@ table .actions .delete { background:url('../img/icons/icon_table_delete.png') no
 	background:none;
 }
 .login section[role=main] > a {
-	background:url('../../../content/logo_3.jpg') no-repeat;
+	background:url('../../../content/logo_3.png') no-repeat;
 	width:200px;
 	height:60px;
 	text-indent:-9999em;
